src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.headline,
.heading-one {
  @apply text-6xl font-semibold tracking-tight;
}

.heading-two,
.markdown h2 {
  @apply text-5xl font-semibold;
}

.heading-three,
.heading-four,
.markdown h3,
.markdown h4 {
  @apply text-3xl font-semibold;
}

.heading-five,
.markdown h5,
.heading-six,
.markdown h6,
.subheading {
  @apply text-2xl font-medium;
}

.text-lead {
  @apply text-xl font-bold;
}

.text-regular,
.markdown p {
  @apply text-base;
}

.text-small {
  @apply text-sm;
}

.react-datepicker-wrapper {
  @apply w-full;
}

.custom-calendar .react-datepicker__header {
  @apply bg-brand-charcoal;
}

.custom-calendar .react-datepicker__current-month,
.custom-calendar .react-datepicker__day-name {
  @apply text-brand-off-white;
}

.custom-calendar .react-datepicker__navigation {
  @apply mt-1;
}

.custom-calendar .react-datepicker__day--selected {
  @apply bg-brand-charcoal text-brand-gold;
}

.custom-calendar .react-datepicker__day {
  @apply hover:bg-brand-charcoal hover:text-brand-gold;
}

